--- a/templates/good.html
+++ b/templates/good.html
@@ -1,26 +1,22 @@
 {% include "./components/header.html" %}
 <div class="goodcontainer">
   <div class="bg-good-container">
-    <div class="good-img"></div>
+    <div class="good-img">
+      <img src="{{good.img_url_front}}" alt="hdeu" />
+    </div>
   </div>
   <div class="good-info">
-    <div class="good-name">Футболка крута</div>
-    <div class="artcl">Артикул: 00000031425</div>
-    <div class="good-price">100$</div>
-    <div class="color-name">Колір:</div>
+    <div class="good-name">{{good.name}}</div>
+    <div class="artcl">Артикул: {{good.code}}</div>
+    <div class="good-price">{{good.price}}$</div>
+    <div class="color-name">Колір: {{good.color}}</div>
     <div class="colors-available">...</div>
-    <div class="size-name">Розмір:</div>
-    <div class="size-available">S M L</div>
+    <div class="size-name">Розмір: {{good.size}}</div>
+    <div class="size-available">S M L /*ФІКСИТИ!!*/</div>
     <div class="description-header">Опис:</div>
-    <div class="description">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, similique at. Obcaecati, deserunt delectus suscipit adipisci veniam optio corrupti
-      quasi exercitationem quisquam ipsam! Incidunt eos at amet libero nisi maiores.
-    </div>
+    <div class="description">{{good.description}}</div>
     <div class="composition-and-care-header">Склад та доглад:</div>
-    <div class="composition-and-care">
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde quo quae excepturi iusto beatae, numquam repellendus nam tenetur labore inventore
-      odit. Mollitia, saepe facere sequi accusantium id magni quasi dolore.
-    </div>
+    <div class="composition-and-care">{{good.made_of}}</div>
     <button class="add-to-cart-btn">ДОДАТИ В КОШИК</button>
   </div>
 </div>
