--- a/templates/good.html
+++ b/templates/good.html
@@ -2,7 +2,7 @@
 <div class="goodcontainer">
   <div class="bg-good-container">
     <div class="good-img">
-      <img src="{{good.img_url_front}}" alt="hdeu" />
+      <img src="{{good.img_url_front}}" alt="hdeu" style="width: 100%;"/>
     </div>
   </div>
   <div class="good-info">
