--- a/templates/payment.html
+++ b/templates/payment.html
@@ -18,28 +18,12 @@
     </div>
     <div class="cart-summary">
         <h2>ВАШ КОШИК</h2>
-        <div class="cart-item">
-            <img src="../static/public/t-shirt.png" alt="Футболка">
-            <div class="item-details">
-                <p>ФУТБОЛКА</p>
-                <p>Розмір: S</p>
-                <p>Колір: Білий</p>
-                <p>100$</p>
-            </div>
+        <div class="cart-item-payment-container">
+
+            
         </div>
-        <div class="cart-item">
-            <img src="../static/public/t-shirt.png" alt="Футболка">
-            <div class="item-details">
-                <p>ФУТБОЛКА</p>
-                <p>Розмір: S</p>
-                <p>Колір: Білий</p>
-                <div class="total-sum">
-                    <p>100$</p>
-                </div>
-                
-            </div>
-        </div>
-        <div class="total-price">РАЗОМ 200$</div>
+       
+        <div class="total-price">РАЗОМ &nbsp;<div class="total-price-valye"></div>$</div>
     </div>
     <div class="delivery-options">
         <h2>ОБЕРІТЬ СПОСІБ ДОСТАВКИ</h2>
