--- a/static/payment.css
+++ b/static/payment.css
@@ -52,7 +52,7 @@ body {
     border-radius: 10px;
 }
 
-h2 {
+.checkout-page h2 {
     font-size: 18px;
     margin-bottom: 15px;
 }
@@ -108,6 +108,7 @@ textarea {
     text-align: right;
     margin-top: 20px;
     justify-content: end;
+    display: flex;
 }
 
 
