--- a/templates/good.html
+++ b/templates/good.html
@@ -10,9 +10,9 @@
     <div class="artcl">Артикул: {{good.code}}</div>
     <div class="good-price">{{good.price}}$</div>
     <div class="color-name">Колір: {{good.color}}</div>
-    <div class="colors-available">...</div>
+    <!-- <div class="colors-available">...</div> -->
     <div class="size-name">Розмір: {{good.size}}</div>
-    <div class="size-available">S M L /*ФІКСИТИ!!*/</div>
+    <!-- <div class="size-available">S M L /*ФІКСИТИ!!*/</div> -->
     <div class="description-header">Опис:</div>
     <div class="description">{{good.description}}</div>
     <div class="composition-and-care-header">Склад та доглад:</div>
