--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -59,6 +59,7 @@
                   </div>
                   
                   <div class="cartedGoodsContainer"></div>
+                  <a class="cartedGoodsContainerButton" href ="/payment">Оформити бажання</a>
 
                 </div>
               
