--- a/static/good.css
+++ b/static/good.css
@@ -12,7 +12,6 @@
 
 .good-img{
     width: 100%;
-    height: 900px;
     background-repeat: no-repeat;
     background-size: contain;
 
@@ -91,7 +90,7 @@
     animation: cartbeatButton 0.45s;
 }
 
-@keyframes cartbeatButton { /*потрібно пофіксити, при кліку на сердечко, анімація рендериться з нуля та дьоргається*/
+@keyframes cartbeatButton { 
     0% {
         transform: scale(1);
     }
@@ -121,6 +120,11 @@
     height: 30px;
     transition: border 0.25s ease;
     margin-left: 5px;
+    
+}
+
+.size-name-datalist:focus {
+    outline: 2px solid transparent;
 }
 
 .size-name-datalist:hover {
@@ -148,17 +152,138 @@
     margin-top: 3px;
 }
 
-.background {
+.meter-for-body-background {
     background-image: url('../static/public/meter-for-body.png');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     width: 70%;
     height: 70%;
-    
 }
 
 .meter-for-body:hover{
     border: 2px solid #274bff ; 
     box-shadow: 0 0px 6px rgba(39, 75, 255, 0.5);
 }
+
+.meter-table-container-title-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.meter-table-container{
+    position: fixed; 
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 1000px; 
+    height: 600px;
+    max-width: 90%;
+    max-height: 85%;
+    overflow-y: auto;
+    border: 3px solid #ccc;
+    border-radius: 10px;
+    padding: 30px;
+    box-shadow: 0 0px 6px rgba(38, 38, 38, 0.5);
+    background-color: #fff;
+    z-index: 1100; 
+    display: none;
+}
+
+.meter-table-container-title-container h1{
+    font-size: 25px;
+}
+
+.meter-table-container-close-button {
+    font-size: 20px;
+    cursor: pointer;
+    color: #919191;
+    transition: color 0.1s ease;
+}
+
+.meter-table-container-close-button:hover {
+    color: #ff0000; 
+}
+
+.meter-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); 
+    z-index: 1000;
+    display: none;
+}
+
+body.locked {
+    overflow: hidden;
+}
+
+.tabs {
+    display: flex;
+    gap: 10px;
+    margin-bottom: 10px;
+}
+
+.tab-button {
+    padding: 8px 20px;
+    background-color: #fcfcfc;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.tab-button.active {
+    border: 2px solid #274bff ; 
+    box-shadow: 0 0px 6px rgba(39, 75, 255, 0.5);
+}
+
+.tab-content {
+    display: none;
+}
+  
+.tab-content:not(.hidden) {
+    display: block;
+}
+  
+.hidden {
+    display: none;
+}
+
+.tab-content-wrapper{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 40px;
+}
+
+.how-to-measure-photo{
+    width: 300px;
+}
+
+.how-to-measure-text{
+    width: 600px;
+}
+
+.how-to-measure-text h1{
+    font-size: 22px;
+    font-weight: bold;
+    margin-bottom: 25px;
+}
+
+.how-to-measure-text h2{
+    font-size: 14px;
+    margin-bottom: 10px;
+    font-weight: 300;
+}
+
+.how-to-measure{
+    margin-top: 40px;
+}
+
+
