--- a/static/home.css
+++ b/static/home.css
@@ -199,7 +199,6 @@
 }
 
 .good-catalog-wrapper{
-    /* width: 400px; */
     display: flex;
     flex-direction: column;
     align-items: start;
@@ -208,6 +207,7 @@
     padding: 30px;
     transition: 15s;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
 }
 
 .good-name{
